name:                storage
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/storage#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
                     , Storage
                     , Query
                     , Serialization
                     , Data.HashTable.IO.ConcurrentLinear
                     , Data.SkipList.IO
                     , Control.Concurrent.RWLock
                     , Data.IORef.Marked

  other-modules:       Data.HashTable.Internal.Bucket
                     , Data.HashTable.Internal.Utils

  build-depends:       base >= 4.7 && < 5
                     , network
                     , bytestring
                     , containers >= 0.5.8
                     , concurrent-extra
                     , mtl
                     , focus
                     , vector
                     , hashable
                     , atomic-primops
                     , random
                     , transformers
  default-language:    Haskell2010

executable storage
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , storage
                     , network
                     , async
  default-language:    Haskell2010

test-suite storage-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Query.ParseQuerySpec
                     , Storage.StorageSpec
                     , Serialization.SerializationSpec
                     , Server.ServerSpec
                     , Data.HashTable.IO.ConcurrentLinearSpec
                     , Data.SkipList.IOSpec
                     , Data.IORef.MarkedSpec
  build-depends:       base
                     , storage
                     , focus
                     , hspec
                     , bytestring
                     , monad-parallel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/storage
